# JT_SIM

./: CMakeLists.txt  Citation.cff  main.cpp  plot.py
.github/workflows/: cmake-multi-platform.yml  cross_platform.yaml
include/: Constants.h  Ensemble.h  Particle.h  QTEnsemble.h  Quad.h  QuadTree.h  VWParticle.h  Vector2D.h  Wall.h
src/: Ensemble.cpp  Particle.cpp  QTEnsemble.cpp  QuadTree.cpp  VWParticle.cpp  Wall.cpp
